// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Snapshots tests should match snapshot 1`] = `
<body>
  <div>
    <div
      class="component component"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="leftAddons"
          >
            <div
              class="wrapper positive m outlineColor badge"
              data-test-id="badge"
            >
              <div
                class="component m icon background-accent graphic-static-light positive"
              >
                <svg
                  class="badgeIcon"
                  fill="currentColor"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                >
                  <path
                    clip-rule="evenodd"
                    d="M22 12c0 5.523-4.477 10-10 10S2 17.523 2 12 6.477 2 12 2s10 4.477 10 10zm-11.5 4L17 9.5 15.5 8l-5 5-2-2L7 12.5l3.5 3.5z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="contentTitle"
            >
              <div
                class="title title"
              >
                title
              </div>
              <div
                class="children"
              >
                text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification Snapshots tests should match snapshot with leftAddons 1`] = `
<body>
  <div>
    <div
      class="component component"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="leftAddons"
          >
            <div>
              leftAddons
            </div>
          </div>
          <div
            class="content"
          >
            <div
              class="contentTitle"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Notification Snapshots tests should match snapshot without icon 1`] = `
<body>
  <div>
    <div
      class="component component"
    >
      <div
        class="wrapper"
      >
        <div
          class="contentWrapper"
        >
          <div
            class="content"
          >
            <div
              class="contentTitle"
            >
              <div
                class="title title"
              >
                title
              </div>
              <div
                class="children"
              >
                text
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
